# ntn-linksim-leo

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/rician_k_sweep/: sweep_rician.json
ntn_linksim/: __init__.py  cli.py  rng.py  scenarios.py  sim.py
ntn_linksim/channel/: __init__.py  awgn.py  cfo.py  delay.py  rician.py
ntn_linksim/experiments/: __init__.py  sweep.py
ntn_linksim/rx/: __init__.py  cfo.py  timing.py
ntn_linksim/waveform/: __init__.py  modulation.py  ofdm.py
scenarios/: awgn.yaml  cfo_sweep.yaml  delay_sweep.yaml  leo_fast.yaml  leo_fast_rician.yaml  rician_k_sweep.yaml
scenarios/mini/: awgn.yaml  cfo_sweep.yaml  rician_k_sweep.yaml
tests/: test_awgn_calibration.py  test_ber_trend.py  test_cfo_compensation_helps.py  test_cfo_estimator_cp.py  test_cfo_injection.py  test_cfo_sweep.py  test_delay_injection.py  test_delay_sweep.py  test_reproducible_seed.py  test_rician_ber.py  test_rician_injection.py  test_rician_sweep.py  test_scenario_loader.py  test_scenario_run.py  test_timing_compensation_helps.py  test_timing_estimator.py
